proj/solution/.autopilot/db/snn_izhikevich_top.pp.0.cpp.clang-tidy.loop-label.out.log
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:1365:7: warning: Added loop label VITIS_LOOP_1213_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1213_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:1365:7: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2339:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2339:5: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2353:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2353:5: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2367:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:2367:5: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:3978:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:3978:7: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6598:63: warning: Added loop label VITIS_LOOP_22_1:   [xilinx-label-all-loops]
 synapses_layer_updates: for (x = 0, l = 0; l < (1 + 1); l++) for (xl = 0; xl < 6; xl++, x++) {
                                                              ^~~
                                                              VITIS_LOOP_22_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6598:63: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6654:9: error: Resource with core_name: FAddSub_fulldsp pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=new_u core=FAddSub_fulldsp latency=8
        ^
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6667:2: warning: Added loop label VITIS_LOOP_105_1:   [xilinx-label-all-loops]
 for (uint32_t b = 0; b < (((int32_t)((32 * 6 + (64 * 4) - 1 ) / (64 * 4))) * (64 * 4)); b+= (64 * 4)) {
 ^~~
 VITIS_LOOP_105_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6667:2: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6707:62: warning: Added loop label VITIS_LOOP_154_1:   [xilinx-label-all-loops]
 synaptic_conductances: for (x = 0, l = 0; l < (1 + 1); l++) for (xl = 0; xl < 6; xl++, x++) {
                                                             ^~~
                                                             VITIS_LOOP_154_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6707:62: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6733:9: error: Resource with core_name: FAddSub_fulldsp pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=sum_g_exh core=FAddSub_fulldsp latency=8
        ^
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6734:9: error: Resource with core_name: FAddSub_fulldsp pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=sum_g_inh core=FAddSub_fulldsp latency=8
        ^
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6743:17: warning: Added loop label VITIS_LOOP_199_2:   [xilinx-label-all-loops]
  if (xl==6 -1) for (y = 0; y < 6; y++) {
                ^~~
                VITIS_LOOP_199_2: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6743:17: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6797:2: warning: Added loop label VITIS_LOOP_15_1:   [xilinx-label-all-loops]
 for (s = 0; s < ((int32_t)((((1 + 1) * 6) + 64 - 1 ) / 64)); s++) for (b = 0; b < 64; b++) {
 ^~~
 VITIS_LOOP_15_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6797:2: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6797:68: warning: Added loop label VITIS_LOOP_15_2:   [xilinx-label-all-loops]
 for (s = 0; s < ((int32_t)((((1 + 1) * 6) + 64 - 1 ) / 64)); s++) for (b = 0; b < 64; b++) {
                                                                   ^~~
                                                                   VITIS_LOOP_15_2: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6797:68: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6824:2: warning: Added loop label VITIS_LOOP_42_1:   [xilinx-label-all-loops]
 for (stream_id = 0; stream_id < ((int32_t)((6 + 32 - 1 ) / 32)); stream_id++) {
 ^~~
 VITIS_LOOP_42_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6824:2: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6825:3: warning: Added loop label VITIS_LOOP_43_2:   [xilinx-label-all-loops]
  for (b = 0; b < 32; b++) {
  ^~~
  VITIS_LOOP_43_2: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6825:3: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6899:2: warning: Added loop label VITIS_LOOP_41_1:   [xilinx-label-all-loops]
 for (int32_t x = 0; x < 2; x++) {
 ^~~
 VITIS_LOOP_41_1: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6899:2: note: FIX-IT applied suggested code changes
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6905:2: warning: Added loop label VITIS_LOOP_47_2:   [xilinx-label-all-loops]
 for (int32_t x = 0; x < ((1 + 1) * 6); x++) {
 ^~~
 VITIS_LOOP_47_2: 
C:\automate_snn_hls\snn_izhikevich\proj\solution\.autopilot\db\snn_izhikevich_top.pp.0.cpp:6905:2: note: FIX-IT applied suggested code changes
